# investor

./: .gitignore  AGENTS.md  README.md  install.ps1  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: release.yml
docs/: AI_AGENT_HARNESS.md  DISCOVERY_HARNESS.md  RELEASES.md  USAGE.md
examples/: prompts.md
investor_research/: __init__.py  cli.py  logging_utils.py  models.py  providers.py  workflow.py
investor_research/filings/: extractor.py
investor_research/metrics/: __init__.py  engine.py
investor_toolkit/: __init__.py  audit.py  cli.py  data_import.py  evals.py  financials.py  indexing.py  logging_utils.py  mcp_server.py  profile.py  providers.py  rsu_tax.py  storage.py  utils.py  workflow.py
investor_toolkit/agent_harness/: __init__.py  approvals.py  claim_verifier.py  engine.py  llm.py  schemas.py
investor_toolkit/app/: __init__.py  agent_harness_service.py  artifact_catalog.py  context.py  discovery_service.py  portfolio_service.py  profile_service.py  research_service.py  schemas.py  services.py  valuation_service.py
scripts/: doctor.ps1  publish-release.ps1  setup.ps1
tests/: test_agent_harness.py  test_audit_ledger.py  test_data_import_contracts.py  test_discovery_harness.py  test_filing_extraction.py  test_filing_extraction_regressions.py  test_institutional_agent_harness.py  test_mcp_contract.py  test_metrics_engine.py  test_portfolio_engine.py  test_profile_onboarding.py  test_provider_financial_regressions.py  test_rsu_tax.py  test_start_workflow.py  test_valuation_engine.py  test_valuation_storage_safety.py
(+15 files in other folders)
