[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "investor-toolkit"
version = "0.2.0"
description = "Local-first investor toolkit CLI"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Investor Toolkit" }]
dependencies = []

[project.scripts]
investor = "investor_toolkit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["investor_toolkit*"]
